# rpipico-project-template

./: CMakeLists.txt  README.md  main.c  platformio.ini
lib/: README.md
